SUBDIRS = ia32 rpc sys util

libdiskmgtdir = $(includedir)/libdiskmgt
libspl_HEADERS = \
	$(top_srcdir)/lib/libdiskmgt/include/disklist.h \
	$(top_srcdir)/lib/libdiskmgt/include/disks_private.h	\
	$(top_srcdir)/lib/libdiskmgt/include/partition.h	\
	$(top_srcdir)/lib/libdiskmgt/include/slices.h	\
	$(top_srcdir)/lib/libdiskmgt/include/libsysenv.h

